refactor: REST Docs API 문서 리팩토링 (#94)
* refactor: 테스트 코드, adoc 수정

* refactor: restdocs API 문서 응답 값 수정

Co-authored-by: Haeseong Jeon <seong0428@gmail.com>
Co-authored-by: ned-choi <ned.choi@kakaocorp.com>